<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="365dp"
    android:layout_gravity="center"
    android:layout_marginLeft="55dp"
    android:layout_marginRight="55dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/primary_color"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/Add_Comment"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/t_COMMENT"
            android:layout_width="242dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:hint="@string/Comment_here"
            android:inputType="textMultiLine"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frmNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="70dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_CANCEL"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:background="@drawable/positive_button"
            android:backgroundTint="#ED091C"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="15dp"
            android:elevation="6dp"
            android:fontFamily="sans-serif"
            android:hapticFeedbackEnabled="true"
            android:padding="10dp"
            android:text="@string/Dialog_cancel"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frmOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="70dp"
        android:layout_marginTop="100dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_OK"
            android:layout_width="90dp"
            android:layout_height="60dp"
            android:background="@drawable/positive_button"
            android:backgroundTint="@color/Giganet_green"
            android:src="@android:color/transparent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="15dp"
            android:elevation="6dp"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:hapticFeedbackEnabled="true"
            android:padding="5dp"
            android:text="@string/Dialog_ok"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </FrameLayout>
</FrameLayout>