<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="375dp"
    android:layout_height="450dp"
    android:layout_gravity="center"
    android:layout_marginLeft="55dp"
    android:layout_marginRight="55dp"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:background="@color/primary_color"
        android:orientation="vertical">


        <ImageView
            android:layout_width="61dp"
            android:layout_height="63dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:src="@android:drawable/ic_dialog_alert" />

        <TextView
            android:id="@+id/t_TITLE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/dialog_warning_pause"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_WARNING"
            android:layout_width="309dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:hint="@string/Add_Comment"
            android:inputType="none"
            android:padding="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frmNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="165dp"
        android:layout_marginEnd="100dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_CANCEL"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:background="@drawable/positive_button"
            android:backgroundTint="#ED091C"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:hapticFeedbackEnabled="true"
            android:src="@android:color/transparent" />

        <TextView
            android:id="@+id/t_negative_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="20dp"
            android:elevation="6dp"
            android:fontFamily="sans-serif"
            android:padding="10dp"
            android:text="@string/dialog_warning_negative"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frmOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="100dp"
        android:layout_marginTop="165dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/b_OK"
            android:layout_width="105dp"
            android:layout_height="50dp"
            android:background="@drawable/positive_button"
            android:backgroundTint="@color/Giganet_green"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:hapticFeedbackEnabled="true"
            android:src="@android:color/transparent" />

        <TextView
            android:id="@+id/t_positive_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:autoSizeMaxTextSize="20dp"
            android:elevation="6dp"
            android:fontFamily="sans-serif"
            android:padding="5dp"
            android:text="@string/dialog_warning_positive"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </FrameLayout>
</FrameLayout>